feat: FruitProperty 추가
- @ConfigurationProperties
- lombok 의존성 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,12 @@ property:
     name: property depth test
 propertyTest: test
 propertyTestList: a,b,c
+
+fruit:
+  list:
+    - name: banana
+      color: yellow
+    - name: apple
+      color: red
+    - name: water melon
+      color: green
